--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 	<name>authorization</name>
 	<description>Spring Boot project for authorization</description>
 	<properties>
-<!--		<java.version>11</java.version>-->
+		<java.version>11</java.version>
+<!--		<maven.compiler.source>11</maven.compiler.source>-->
+<!--		<maven.compiler.target>11</maven.compiler.target>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,6 +41,53 @@
 		</dependency>
 	</dependencies>
 
+	<scm>
+		<connection>scm:git:ssh://git@github.com:madgeek-arc/authorization.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:madgeek-arc/authorization.git</developerConnection>
+		<url>https://github.com/madgeek-arc/authorization.git</url>
+		<tag>HEAD</tag>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>true</uniqueVersion>
+			<id>omtd-releases</id>
+			<layout>default</layout>
+			<url>https://repo.openminted.eu/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<uniqueVersion>true</uniqueVersion>
+			<id>omtd-snapshots</id>
+			<layout>default</layout>
+			<url>https://repo.openminted.eu/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>omtd-snapshots</id>
+			<layout>default</layout>
+			<url>https://repo.openminted.eu/content/repositories/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>omtd-releases</id>
+			<layout>default</layout>
+			<url>https://repo.openminted.eu/content/repositories/releases</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -47,6 +96,11 @@
 				<configuration>
 					<classifier>exec</classifier>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M4</version>
 			</plugin>
 		</plugins>
 	</build>
