--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:h2:file:/home/konstantinos/authDB;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:file:/tmp/authDB;DATABASE_TO_UPPER=false
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=password
