--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>gr.athenarc</groupId>
 	<artifactId>authorization</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>authorization</name>
 	<description>Spring Boot project for authorization</description>
 	<properties>
@@ -45,7 +44,7 @@
 		<connection>scm:git:ssh://git@github.com:madgeek-arc/authorization.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:madgeek-arc/authorization.git</developerConnection>
 		<url>https://github.com/madgeek-arc/authorization.git</url>
-		<tag>HEAD</tag>
+		<tag>authorization-0.0.2</tag>
 	</scm>
 
 	<distributionManagement>
