--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,7 @@ authorization.datasource.driverClassName=org.h2.Driver
 authorization.datasource.username=admin
 authorization.datasource.password=password
 
-authorization.datasource.hibernate.hbm2ddl=update
+authorization.datasource.hibernate.hbm2ddl=create-drop
 authorization.datasource.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Enabling H2 Console
@@ -12,3 +12,5 @@ spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+logging.level.org.springframework=info
