--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version>
+		<version>3.4.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>gr.athenarc</groupId>
+	<groupId>gr.uoa.di.madgik</groupId>
 	<artifactId>authorization</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<name>authorization</name>
