fix: change authorization datasource properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ authorization.datasource.driverClassName=org.h2.Driver
 authorization.datasource.username=admin
 authorization.datasource.password=password
 
-authorization.datasource.hibernate.hbm2ddl=update
-authorization.datasource.hibernate.dialect=org.hibernate.dialect.H2Dialect
+authorization.jpa.properties.hibernate.hbm2ddl.auto=update
+authorization.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
