--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,11 @@
 
-authorization.datasource.url=jdbc:h2:file:/tmp/authDB;DATABASE_TO_UPPER=false
+authorization.datasource.url=jdbc:h2:mem:authDB;DATABASE_TO_UPPER=false;
 authorization.datasource.driverClassName=org.h2.Driver
 authorization.datasource.username=admin
 authorization.datasource.password=password
 
-authorization.datasource.hibernate.hbm2ddl=create-drop
-authorization.datasource.hibernate.dialect=org.hibernate.dialect.H2Dialect
+authorization.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+authorization.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
