chore: Add license

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,19 @@
 	<version>2.0.1-SNAPSHOT</version>
 	<name>authorization</name>
 	<description>Spring Boot project for authorization</description>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
-	<dependencies>
 
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
